--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URL_test = mongodb://localhost:27017/mern
+MONGODB_URL_test = "mongodb+srv://Nitesh9609:Nitesh9609@cluster0.fnrsx.mongodb.net/social-media?retryWrites=true&w=majority"
 
-ACCESS_TOKEN_SECRET = itissecret
+ACCESS_TOKEN_SECRET = itissecretdededed
 
-REFRESH_TOKEN_SECRET = itisalsosecret
+REFRESH_TOKEN_SECRET = itisalsosecretdwdwd
